services/ai-validation/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ai-validation
  labels:
    app: ai-validation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ai-validation
  template:
    metadata:
      labels:
        app: ai-validation
    spec:
      containers:
        - name: ai-validation
          image: docker.io/solarianetwork/ai-validation:62e2257
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 20
